readme edit && bug fix

--- a/views/scraping.ejs
+++ b/views/scraping.ejs
@@ -11,5 +11,6 @@
         <input type="text" name="searchTerm" id="">
         <button type="submit" >scrap</button>
     </form>
+    <a href="/">Home</a>
 </body>
 </html>
